homework2/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw-2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: andrewotuscourse/docker-demo-1:1
        ports:
        - containerPort: 8000
