homework2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw-2-service
  namespace: default
  labels:
    name: otus-hw-2-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
    name: http
